--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #FF2cFF;
   display: flex;
   flex-direction: column;
   align-items: center;
